--- a/centro medico/RDLC/custom/aspe/Factura.rdlc
+++ b/centro medico/RDLC/custom/aspe/Factura.rdlc
@@ -2372,9 +2372,19 @@
                     <Paragraph>
                       <TextRuns>
                         <TextRun>
-                          <Value>=IIF(First(Fields!REFSERIE.Value, "dsFactura") = "MD" OR First(Fields!REFSERIE.Value, "dsFactura") = "MD13" OR First(Fields!REFSERIE.Value, "dsFactura") = "MD14" OR First(Fields!REFSERIE.Value, "dsFactura") = "MD15", 
+                          <Value>=IIF(First(Fields!REFSERIE.Value, "dsFactura") = "MD" 
+OR First(Fields!REFSERIE.Value, "dsFactura") = "MD13" 
+OR First(Fields!REFSERIE.Value, "dsFactura") = "MD14" 
+OR First(Fields!REFSERIE.Value, "dsFactura") = "MD15"
+OR First(Fields!REFSERIE.Value, "dsFactura") = "MD16"
+OR First(Fields!REFSERIE.Value, "dsFactura") = "MD17", 
 "DNI: 22112466J", 
-IIF(First(Fields!REFSERIE.Value, "dsFactura") = "TG" OR First(Fields!REFSERIE.Value, "dsFactura") = "TG13" OR First(Fields!REFSERIE.Value, "dsFactura") = "TG14" OR First(Fields!REFSERIE.Value, "dsFactura") = "TG15"  , 
+IIF(First(Fields!REFSERIE.Value, "dsFactura") = "TG" 
+OR First(Fields!REFSERIE.Value, "dsFactura") = "TG13" 
+OR First(Fields!REFSERIE.Value, "dsFactura") = "TG14" 
+OR First(Fields!REFSERIE.Value, "dsFactura") = "TG15"
+OR First(Fields!REFSERIE.Value, "dsFactura") = "TG16"
+OR First(Fields!REFSERIE.Value, "dsFactura") = "TG17", 
 "DNI: 74211891E", "CIF: "+ First(Fields!CIF.Value, "dsClinica")))</Value>
                           <Style>
                             <FontSize>8pt</FontSize>
@@ -2433,10 +2443,16 @@ IIF(First(Fields!REFSERIE.Value, "dsFactura") = "TG" OR First(Fields!REFSERIE.Va
                         <TextRun>
                           <Value>=IIF(First(Fields!REFSERIE.Value, "dsFactura") = "MD"
   OR First(Fields!REFSERIE.Value, "dsFactura") = "MD13"
-  OR First(Fields!REFSERIE.Value, "dsFactura") = "MD14" OR First(Fields!REFSERIE.Value, "dsFactura") = "MD15" , " ", 
+  OR First(Fields!REFSERIE.Value, "dsFactura") = "MD14" 
+  OR First(Fields!REFSERIE.Value, "dsFactura") = "MD15"
+  OR First(Fields!REFSERIE.Value, "dsFactura") = "MD16"
+  OR First(Fields!REFSERIE.Value, "dsFactura") = "MD17" , " ", 
  IIF(First(Fields!REFSERIE.Value, "dsFactura") = "TG" 
   OR First(Fields!REFSERIE.Value, "dsFactura") = "TG13"
-  OR First(Fields!REFSERIE.Value, "dsFactura") = "TG14" OR First(Fields!REFSERIE.Value, "dsFactura") = "TG15" , " ", 
+  OR First(Fields!REFSERIE.Value, "dsFactura") = "TG14" 
+  OR First(Fields!REFSERIE.Value, "dsFactura") = "TG15"
+  OR First(Fields!REFSERIE.Value, "dsFactura") = "TG16"
+  OR First(Fields!REFSERIE.Value, "dsFactura") = "TG17" , " ", 
  "Registro Sanitario: 04820"))</Value>
                           <Style>
                             <FontSize>9pt</FontSize>
@@ -2473,13 +2489,16 @@ IIF(First(Fields!REFSERIE.Value, "dsFactura") = "TG" OR First(Fields!REFSERIE.Va
   OR
  First(Fields!REFSERIE.Value, "dsFactura") = "MD15"
   OR
- First(Fields!REFSERIE.Value, "dsFactura") = "MD16", 
+ First(Fields!REFSERIE.Value, "dsFactura") = "MD16" 
+  OR
+ First(Fields!REFSERIE.Value, "dsFactura") = "MD17", 
 "MANUEL DIEZ DIEZ", 
 IIF(First(Fields!REFSERIE.Value, "dsFactura") = "TG"
 OR First(Fields!REFSERIE.Value, "dsFactura") = "TG13"
 OR First(Fields!REFSERIE.Value, "dsFactura") = "TG14" 
 OR First(Fields!REFSERIE.Value, "dsFactura") = "TG15"
-OR First(Fields!REFSERIE.Value, "dsFactura") = "TG16", 
+OR First(Fields!REFSERIE.Value, "dsFactura") = "TG16"
+OR First(Fields!REFSERIE.Value, "dsFactura") = "TG17",  
 "TOMAS GALVAN CAÑIZARES", First(Fields!NOMBRE.Value, "dsClinica")))</Value>
                           <Style>
                             <FontSize>11pt</FontSize>
