--- a/centro medico/RDLC/custom/aspe/FacturaMutua.rdlc
+++ b/centro medico/RDLC/custom/aspe/FacturaMutua.rdlc
@@ -2721,13 +2721,15 @@
 OR First(Fields!REFSERIE.Value, "dsFactura") = "MD13"
 OR First(Fields!REFSERIE.Value, "dsFactura") = "MD14"
 OR First(Fields!REFSERIE.Value, "dsFactura") = "MD15" 
-OR First(Fields!REFSERIE.Value, "dsFactura") = "MD16", 
+OR First(Fields!REFSERIE.Value, "dsFactura") = "MD16"
+OR First(Fields!REFSERIE.Value, "dsFactura") = "MD17", 
 "MANUEL DIEZ DIEZ", 
 IIF(First(Fields!REFSERIE.Value, "dsFactura") = "TG"
 OR First(Fields!REFSERIE.Value, "dsFactura") = "TG13"
 OR First(Fields!REFSERIE.Value, "dsFactura") = "TG14"
 OR First(Fields!REFSERIE.Value, "dsFactura") = "TG15"
-OR First(Fields!REFSERIE.Value, "dsFactura") = "TG16",
+OR First(Fields!REFSERIE.Value, "dsFactura") = "TG16"
+OR First(Fields!REFSERIE.Value, "dsFactura") = "TG17",
  "TOMAS GALVAN CAÑIZARES", First(Fields!NOMBRE.Value, "dsClinica")))</Value>
                       <Style>
                         <FontSize>11pt</FontSize>
@@ -2762,13 +2764,15 @@ OR First(Fields!REFSERIE.Value, "dsFactura") = "TG16",
 OR First(Fields!REFSERIE.Value, "dsFactura") = "MD13"  
 OR First(Fields!REFSERIE.Value, "dsFactura") = "MD14" 
 OR First(Fields!REFSERIE.Value, "dsFactura") = "MD15"
-OR First(Fields!REFSERIE.Value, "dsFactura") = "MD16", 
+OR First(Fields!REFSERIE.Value, "dsFactura") = "MD16"
+OR First(Fields!REFSERIE.Value, "dsFactura") = "MD17", 
 "DNI: 22112466J", 
 IIF(First(Fields!REFSERIE.Value, "dsFactura") = "TG" 
 OR First(Fields!REFSERIE.Value, "dsFactura") = "TG13"  
 OR First(Fields!REFSERIE.Value, "dsFactura") = "TG14"  
 OR First(Fields!REFSERIE.Value, "dsFactura") = "TG15"
-OR First(Fields!REFSERIE.Value, "dsFactura") = "TG16", 
+OR First(Fields!REFSERIE.Value, "dsFactura") = "TG16"
+OR First(Fields!REFSERIE.Value, "dsFactura") = "TG17", 
 "DNI: 74211891E", "CIF: "+ First(Fields!CIF.Value, "dsClinica")))</Value>
                       <Style>
                         <FontSize>8pt</FontSize>
@@ -2801,13 +2805,15 @@ OR First(Fields!REFSERIE.Value, "dsFactura") = "TG16",
 OR First(Fields!REFSERIE.Value, "dsFactura") = "MD13"
 OR First(Fields!REFSERIE.Value, "dsFactura") = "MD14"
 OR First(Fields!REFSERIE.Value, "dsFactura") = "MD15"
-OR First(Fields!REFSERIE.Value, "dsFactura") = "MD16", 
+OR First(Fields!REFSERIE.Value, "dsFactura") = "MD16"
+OR First(Fields!REFSERIE.Value, "dsFactura") = "MD17", 
 " ", 
 IIF(First(Fields!REFSERIE.Value, "dsFactura") = "TG" 
 OR First(Fields!REFSERIE.Value, "dsFactura") = "TG13"
 OR First(Fields!REFSERIE.Value, "dsFactura") = "TG14"
 OR First(Fields!REFSERIE.Value, "dsFactura") = "TG15"
 OR First(Fields!REFSERIE.Value, "dsFactura") = "TG16"
+OR First(Fields!REFSERIE.Value, "dsFactura") = "TG17"
 , " ", "Registro Sanitario: 04820"))</Value>
                       <Style>
                         <FontSize>9pt</FontSize>
