--- a/centro medico/RDLC/default/CitasListadoConImportes.rdlc
+++ b/centro medico/RDLC/default/CitasListadoConImportes.rdlc
@@ -579,6 +579,9 @@
                   <Width>1.5cm</Width>
                 </TablixColumn>
                 <TablixColumn>
+                  <Width>1.36978cm</Width>
+                </TablixColumn>
+                <TablixColumn>
                   <Width>1.5cm</Width>
                 </TablixColumn>
                 <TablixColumn>
@@ -940,6 +943,37 @@
                     </TablixCell>
                     <TablixCell>
                       <CellContents>
+                        <Textbox Name="Descuento">
+                          <CanGrow>true</CanGrow>
+                          <KeepTogether>true</KeepTogether>
+                          <Paragraphs>
+                            <Paragraph>
+                              <TextRuns>
+                                <TextRun>
+                                  <Value>=Fields!Descuento.Value</Value>
+                                  <Style>
+                                    <FontSize>9pt</FontSize>
+                                  </Style>
+                                </TextRun>
+                              </TextRuns>
+                              <Style>
+                                <TextAlign>Center</TextAlign>
+                              </Style>
+                            </Paragraph>
+                          </Paragraphs>
+                          <rd:DefaultName>Descuento</rd:DefaultName>
+                          <Style>
+                            <VerticalAlign>Middle</VerticalAlign>
+                            <PaddingLeft>2pt</PaddingLeft>
+                            <PaddingRight>2pt</PaddingRight>
+                            <PaddingTop>2pt</PaddingTop>
+                            <PaddingBottom>2pt</PaddingBottom>
+                          </Style>
+                        </Textbox>
+                      </CellContents>
+                    </TablixCell>
+                    <TablixCell>
+                      <CellContents>
                         <Textbox Name="textbox6">
                           <CanGrow>true</CanGrow>
                           <KeepTogether>true</KeepTogether>
@@ -979,7 +1013,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Fields!IMPORTECL.Value</Value>
+                                  <Value>=(Fields!IMPORTECL.Value)-(Fields!Descuento.Value)</Value>
                                   <Style>
                                     <FontSize>9pt</FontSize>
                                   </Style>
@@ -1011,7 +1045,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=FormatCurrency(Fields!IMPORTECL.Value  + Fields!IMPORTEDR.Value )</Value>
+                                  <Value>=FormatCurrency((Fields!IMPORTECL.Value)-(Fields!Descuento.Value) + Fields!IMPORTEDR.Value )</Value>
                                   <Style>
                                     <FontSize>9pt</FontSize>
                                   </Style>
@@ -1346,6 +1380,37 @@
                     </TablixCell>
                     <TablixCell>
                       <CellContents>
+                        <Textbox Name="Textbox21">
+                          <CanGrow>true</CanGrow>
+                          <KeepTogether>true</KeepTogether>
+                          <Paragraphs>
+                            <Paragraph>
+                              <TextRuns>
+                                <TextRun>
+                                  <Value />
+                                  <Style>
+                                    <FontSize>8pt</FontSize>
+                                    <FontWeight>Bold</FontWeight>
+                                  </Style>
+                                </TextRun>
+                              </TextRuns>
+                              <Style />
+                            </Paragraph>
+                          </Paragraphs>
+                          <rd:DefaultName>Textbox21</rd:DefaultName>
+                          <Style>
+                            <Border />
+                            <VerticalAlign>Middle</VerticalAlign>
+                            <PaddingLeft>2pt</PaddingLeft>
+                            <PaddingRight>2pt</PaddingRight>
+                            <PaddingTop>2pt</PaddingTop>
+                            <PaddingBottom>2pt</PaddingBottom>
+                          </Style>
+                        </Textbox>
+                      </CellContents>
+                    </TablixCell>
+                    <TablixCell>
+                      <CellContents>
                         <Textbox Name="textbox32">
                           <CanGrow>true</CanGrow>
                           <KeepTogether>true</KeepTogether>
@@ -1396,7 +1461,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Sum(Fields!IMPORTECL.Value)</Value>
+                                  <Value>=Sum((Fields!IMPORTECL.Value)-(Fields!Descuento.Value))</Value>
                                   <Style>
                                     <FontSize>8pt</FontSize>
                                     <FontWeight>Bold</FontWeight>
@@ -1439,7 +1504,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=FormatCurrency(Sum(Fields!IMPORTEDR.Value) + Sum(Fields!IMPORTECL.Value))</Value>
+                                  <Value>=FormatCurrency(Sum(Fields!IMPORTEDR.Value) + Sum((Fields!IMPORTECL.Value)-(Fields!Descuento.Value)))</Value>
                                   <Style>
                                     <FontSize>8pt</FontSize>
                                     <FontWeight>Bold</FontWeight>
@@ -1493,6 +1558,7 @@
                 <TablixMember />
                 <TablixMember />
                 <TablixMember />
+                <TablixMember />
               </TablixMembers>
             </TablixColumnHierarchy>
             <TablixRowHierarchy>
@@ -1515,10 +1581,9 @@
               </TablixMembers>
             </TablixRowHierarchy>
             <DataSetName>centro_medico_CITA</DataSetName>
-            <Top>0cm</Top>
             <Left>0.01712in</Left>
             <Height>1.63492cm</Height>
-            <Width>27.34429cm</Width>
+            <Width>28.71407cm</Width>
             <Style>
               <FontSize>9pt</FontSize>
             </Style>
@@ -1527,10 +1592,10 @@
         <Height>1.66138cm</Height>
         <Style />
       </Body>
-      <Width>27.59015cm</Width>
+      <Width>28.75755cm</Width>
       <Page>
         <PageHeader>
-          <Height>1.71475in</Height>
+          <Height>1.7353in</Height>
           <PrintOnFirstPage>true</PrintOnFirstPage>
           <PrintOnLastPage>true</PrintOnLastPage>
           <ReportItems>
@@ -1551,7 +1616,7 @@ Factura</Value>
                   </Style>
                 </Paragraph>
               </Paragraphs>
-              <Top>1.32098in</Top>
+              <Top>1.34153in</Top>
               <Left>8.51295in</Left>
               <Height>0.39376in</Height>
               <Width>0.59062in</Width>
@@ -1584,7 +1649,7 @@ Factura</Value>
                 </Paragraph>
               </Paragraphs>
               <rd:DefaultName>textbox9</rd:DefaultName>
-              <Top>1.89076cm</Top>
+              <Top>1.94296cm</Top>
               <Left>0.27044cm</Left>
               <Height>1.05704cm</Height>
               <Width>10.81025cm</Width>
@@ -1614,8 +1679,8 @@ Factura</Value>
                   </Style>
                 </Paragraph>
               </Paragraphs>
-              <Top>1.32098in</Top>
-              <Left>10.26866in</Left>
+              <Top>1.34154in</Top>
+              <Left>10.82747in</Left>
               <Height>0.39376in</Height>
               <Width>0.48941in</Width>
               <ZIndex>2</ZIndex>
@@ -1647,8 +1712,8 @@ Factura</Value>
                   </Style>
                 </Paragraph>
               </Paragraphs>
-              <Top>1.32098in</Top>
-              <Left>9.69419in</Left>
+              <Top>1.34154in</Top>
+              <Left>10.23912in</Left>
               <Height>0.39376in</Height>
               <Width>0.59063in</Width>
               <ZIndex>3</ZIndex>
@@ -1680,8 +1745,8 @@ Factura</Value>
                   </Style>
                 </Paragraph>
               </Paragraphs>
-              <Top>1.32098in</Top>
-              <Left>9.10357in</Left>
+              <Top>1.34153in</Top>
+              <Left>9.6485in</Left>
               <Height>0.39376in</Height>
               <Width>0.59062in</Width>
               <ZIndex>4</ZIndex>
@@ -1713,7 +1778,7 @@ Factura</Value>
                   </Style>
                 </Paragraph>
               </Paragraphs>
-              <Top>1.32098in</Top>
+              <Top>1.34153in</Top>
               <Left>7.91764in</Left>
               <Height>0.39376in</Height>
               <Width>0.60104in</Width>
@@ -1746,7 +1811,7 @@ Factura</Value>
                   </Style>
                 </Paragraph>
               </Paragraphs>
-              <Top>1.32098in</Top>
+              <Top>1.34153in</Top>
               <Left>7.52857in</Left>
               <Height>0.39376in</Height>
               <Width>0.39948in</Width>
@@ -1779,7 +1844,7 @@ Factura</Value>
                   </Style>
                 </Paragraph>
               </Paragraphs>
-              <Top>1.32098in</Top>
+              <Top>1.34153in</Top>
               <Left>4.66523in</Left>
               <Height>0.39376in</Height>
               <Width>1.09791in</Width>
@@ -1812,7 +1877,7 @@ Factura</Value>
                   </Style>
                 </Paragraph>
               </Paragraphs>
-              <Top>1.32099in</Top>
+              <Top>1.34154in</Top>
               <Left>3.58242in</Left>
               <Height>0.39376in</Height>
               <Width>1.08281in</Width>
@@ -1845,7 +1910,7 @@ Factura</Value>
                   </Style>
                 </Paragraph>
               </Paragraphs>
-              <Top>1.32098in</Top>
+              <Top>1.34153in</Top>
               <Left>1.59007in</Left>
               <Height>0.39376in</Height>
               <Width>1.99235in</Width>
@@ -1878,7 +1943,7 @@ Factura</Value>
                   </Style>
                 </Paragraph>
               </Paragraphs>
-              <Top>1.32098in</Top>
+              <Top>1.34153in</Top>
               <Left>1.09788in</Left>
               <Height>0.39376in</Height>
               <Width>0.49219in</Width>
@@ -1912,7 +1977,7 @@ Factura</Value>
                 </Paragraph>
               </Paragraphs>
               <rd:DefaultName>textbox82</rd:DefaultName>
-              <Top>1.32099in</Top>
+              <Top>1.34154in</Top>
               <Left>0.40093in</Left>
               <Height>0.39376in</Height>
               <Width>0.70295in</Width>
@@ -1955,8 +2020,8 @@ Factura</Value>
                 </Paragraph>
               </Paragraphs>
               <rd:DefaultName>Textbox28</rd:DefaultName>
-              <Top>0.06349cm</Top>
-              <Left>16.34014cm</Left>
+              <Top>0.11569cm</Top>
+              <Left>17.8102cm</Left>
               <Height>2.88431cm</Height>
               <Width>7.40789cm</Width>
               <ZIndex>12</ZIndex>
@@ -1975,7 +2040,7 @@ Factura</Value>
               <Value>=First(Fields!LOGOTIPOURLPARAREPORTE.Value, "dsClinica")</Value>
               <MIMEType>image/jpeg</MIMEType>
               <Sizing>Fit</Sizing>
-              <Left>9.41906in</Left>
+              <Left>10.12283in</Left>
               <Height>3cm</Height>
               <Width>3cm</Width>
               <ZIndex>13</ZIndex>
@@ -2004,7 +2069,7 @@ Factura</Value>
                 </Paragraph>
               </Paragraphs>
               <rd:DefaultName>Textbox12</rd:DefaultName>
-              <Top>0.77042cm</Top>
+              <Top>0.82262cm</Top>
               <Left>0.27044cm</Left>
               <Height>0.78521cm</Height>
               <Width>7.2335cm</Width>
@@ -2035,7 +2100,7 @@ Factura</Value>
                   </Style>
                 </Paragraph>
               </Paragraphs>
-              <Top>1.32098in</Top>
+              <Top>1.34153in</Top>
               <Left>5.74925in</Left>
               <Height>0.39376in</Height>
               <Width>0.93057in</Width>
@@ -2068,7 +2133,7 @@ Factura</Value>
                   </Style>
                 </Paragraph>
               </Paragraphs>
-              <Top>1.32098in</Top>
+              <Top>1.34153in</Top>
               <Left>6.67982in</Left>
               <Height>0.39376in</Height>
               <Width>0.84875in</Width>
@@ -2101,11 +2166,55 @@ Factura</Value>
                   </Style>
                 </Paragraph>
               </Paragraphs>
-              <Top>1.32098in</Top>
+              <Top>1.34153in</Top>
               <Left>0.01712in</Left>
               <Height>0.39376in</Height>
               <Width>0.38381in</Width>
               <ZIndex>17</ZIndex>
+              <Style>
+                <Border>
+                  <Style>Solid</Style>
+                </Border>
+                <BackgroundColor>Gainsboro</BackgroundColor>
+                <VerticalAlign>Middle</VerticalAlign>
+                <PaddingLeft>2pt</PaddingLeft>
+                <PaddingRight>2pt</PaddingRight>
+                <PaddingTop>2pt</PaddingTop>
+                <PaddingBottom>2pt</PaddingBottom>
+              </Style>
+            </Textbox>
+            <Textbox Name="textbox95">
+              <CanGrow>true</CanGrow>
+              <KeepTogether>true</KeepTogether>
+              <Paragraphs>
+                <Paragraph>
+                  <TextRuns>
+                    <TextRun>
+                      <Value>Dto.</Value>
+                      <Style />
+                    </TextRun>
+                  </TextRuns>
+                  <Style>
+                    <TextAlign>Center</TextAlign>
+                  </Style>
+                </Paragraph>
+                <Paragraph>
+                  <TextRuns>
+                    <TextRun>
+                      <Value>Importe</Value>
+                      <Style />
+                    </TextRun>
+                  </TextRuns>
+                  <Style>
+                    <TextAlign>Center</TextAlign>
+                  </Style>
+                </Paragraph>
+              </Paragraphs>
+              <Top>1.34154in</Top>
+              <Left>9.10357in</Left>
+              <Height>0.39376in</Height>
+              <Width>0.54493in</Width>
+              <ZIndex>18</ZIndex>
               <Style>
                 <Border>
                   <Style>Solid</Style>
@@ -2159,7 +2268,7 @@ Factura</Value>
           <Style />
         </PageFooter>
         <PageHeight>21cm</PageHeight>
-        <PageWidth>29.7cm</PageWidth>
+        <PageWidth>30cm</PageWidth>
         <InteractiveHeight>29.7cm</InteractiveHeight>
         <InteractiveWidth>21cm</InteractiveWidth>
         <LeftMargin>0.5cm</LeftMargin>
